api-docs for customer
