# controllers/Customer.js
@@ -26,7 +26,7 @@ module.exports.home = (req, res) => {
         res.render('Customer', {customer, table_code, orderId: order._id, token})
     })
     .catch(err => {
-        return res.json({ code: 1, message: "Login Failed", error: err });
+        return res.json({ code: 1, message: "Login Failed" });
     });
 }
 
@@ -49,7 +49,7 @@ module.exports.login = (req, res) => {
             return res.json({ code: 0, message: "Login success", token});
         })
         .catch(err => {
-            return res.json({ code: 1, message: "Login Failed", error: err });
+            return res.json({ code: 1, message: "Login Failed"});
         });
 }
 
@@ -82,7 +82,7 @@ module.exports.get_order = (req, res) => {
             })
         })
         .catch(err => {
-            return res.json({ code: 1, message: "Failed to get order", error: err });
+            return res.json({ code: 1, message: "Failed to get order" });
         });
 }
 
@@ -94,11 +94,11 @@ module.exports.get_by_category = (req, res) => {
     }
 
     Food.find({ category: category })
-        .then(listItems => {
-            return res.json({ code: 0, data: listItems })
+        .then(listFood => {
+            return res.json({ code: 0, listFood })
         })
         .catch(err => {
-            return res.json({ code: 2, message: "Error retrieving food items by category", error: err })
+            return res.json({ code: 1, message: "Error retrieving food items by category" })
         });
 }
 
@@ -134,10 +134,10 @@ module.exports.add_foods_into_order = (req, res) => {
 
             connections.sentOrderToChef()
             
-            res.json({ code: 0, message: 'Added food to order successfully', order })
+            res.json({ code: 0, message: 'Added food to order successfully', order, listFood: listFoods })
         })
     })
     .catch(error => {
-        res.json({ code: 1, message: 'Added food to order failed', error: error })
+        res.json({ code: 1, message: 'Added food to order failed' })
     });
 }
